deploy/base/pacman-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: pacman
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/part-of: pacman-app
    name: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      name: pacman
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: pacman
        name: pacman
    spec:
      restartPolicy: Always
      serviceAccountName: pacman-app
      schedulerName: default-scheduler
      hostNetwork: true
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Powered-By
                  value: Express
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Powered-By
                  value: Express
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
              httpHeaders:
                - name: X-Powered-By
                  value: Express
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: pacman
          ports:
            - name: http-server
              hostPort: 8080
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
      serviceAccount: pacman-app
      dnsPolicy: ClusterFirstWithHostNet
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status: {}
